#5121 Make code compatible to Java 11 (#5123)